# zkEngine_dev

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/: rust.yml
.github/workflows/: rust.yml
examples/: batched.rs  compile_wasm.rs  default.rs  fib.rs  fib_ipa.rs  fib_large.rs  fib_serde.rs  kth_factor.rs  serialized.rs  serialized_batched.rs  spartan.rs  tic_tac_toe.rs  zk.rs  zkml.rs
examples/real_world/: main.rs
examples/v1/: fib.rs  fib_large.rs  fib_serde.rs  kth_factor.rs
not_examples/: batched.rs  default.rs  serialized.rs  zk_ads.rs  zkml.rs
src/: README.md  args.rs  error.rs  errors.rs  lib.rs  tests.rs  wasm_ctx.rs
src/aggregation/: mod.rs  tests.rs
src/circuits/: mod.rs  verify.rs
src/circuits/execution/batched/: mod.rs
src/circuits/execution/default/: mod.rs
src/circuits/gadgets/: bits.rs  mod.rs  signed64.rs  uint64.rs
src/circuits/mcc/: mod.rs
src/circuits/mcc/batched/: circuit.rs  mod.rs
src/circuits/mcc/default/: circuit.rs  mod.rs
src/circuits/step_generator/: macros.rs  mod.rs  tests.rs
src/circuits/supernova/: batched_rom.rs  etable_rom.rs  helpers.rs  mod.rs
src/circuits/supernova/step_circuits/: control_ops.rs  mod.rs  parametric_ops.rs  type_casting.rs
src/circuits/supernova/step_circuits/integer/: bin_op.rs  bit_op.rs  mod.rs  relational_op.rs  shift_op.rs  unary_op.rs
src/pcd/: mod.rs  receipt.rs  tests.rs
src/pcd/aggregation/: mod.rs  tests.rs
src/provider/: mod.rs
src/run/: mod.rs  tests.rs
src/run/batched/: mod.rs  public_values.rs
src/run/default/: mod.rs  public_values.rs
src/sharding/: mod.rs  tests.rs
src/snark/: mod.rs  non_uniform.rs
src/traits/: args.rs  be_engine.rs  mod.rs  prover.rs  public_values.rs  snark.rs  wasm.rs  zkvm.rs
src/utils/: display.rs  macros.rs  memory.rs  mod.rs  nivc.rs  pp.rs  save.rs  tracing.rs  wasm.rs
src/v1/: README.md  error.rs  mod.rs  tests.rs  wasm_ctx.rs
src/v1/aggregation/: mod.rs  tests.rs
src/v1/sharding/: mod.rs  tests.rs
src/v1/utils/: logging.rs  macros.rs  mod.rs  tracing.rs  wasm.rs
src/v1/wasm_snark/: mod.rs  switchboard.rs
src/v1/wasm_snark/gadgets/: int.rs  mcc.rs  mod.rs  utils.rs  wasm.rs
src/v1/wasm_snark/mcc/: mod.rs  multiset_ops.rs  tests.rs
src/v1/wasm_snark/switchboard/: mod.rs  sub_circuits.rs
src/v1/wasm_snark/switchboard/alu/: int32.rs  int64.rs  mod.rs
src/v1/wasm_snark/switchboard/sub_circuits/: mod.rs
src/wasm/: args.rs  mod.rs
src/wasm/ctx/: mod.rs  wasi.rs
src/wasm_snark/: memory_trace.rs  mod.rs
src/wasm_snark/gadgets/: int.rs  mcc.rs  mod.rs  num.rs  utils.rs
src/wasm_snark/mcc/: mod.rs  multiset_ops.rs  tests.rs
src/wasm_snark/switchboard/: mod.rs  tests.rs
src/wasm_snark/switchboard/alu/: int32.rs  int64.rs  mod.rs
wasm/: add.wat  bls.wasm  complete_int_opcodes.wat  example.wasm  example_2.wat  gradient_boosting.wasm  host_call_test.wat  int_opcodes.wat  omit_rel_ops.wat  rel_ops.wat  test.wat  zk_ads.wasm
wasm/control_flow/: if_else.wat
wasm/k3/: hello_env.wasm  if_conditional.wasm  read_api.wasm  sc_write.wasm
wasm/memory/: load_op.wat  load_op_i64.wat  load_store.wat  mem_grow.wat  mem_ops.wat  mem_size.wat  store_op.wat  store_op_i64.wat
wasm/misc/: bulk-ops-memcopy.wat  bulk-ops-memfill.wat  bulk-ops.wat  bulk_memfill.wat  bulk_memfill2.wat  fib.wat  uni-poly-eval.wasm
wasm/nebula/: ams_isa.wat  basic_arith.wat  bit_check.wat  eq_func.wat  integer_hash.wasm  kth_factor.wat  regression_model.wasm
wasm/sb/: basic.wat  basic_i64.wat  call_indirect.wasm  dk.wat  factorial.wasm  polynomial-transform.wasm  rotl.wasm  small-funcs.wasm  small-ml.wasm
wasm/sb/br_adjust/: br_adjust_0.wat
wasm/use_cases/: code.md  data_provenance.wasm  defi_transaction.wasm  energy_usage.wasm  financial_protocol.wasm  game_logic.wasm  regulatory_compliance.wasm  smart_contract_audit.wasm  toy_rsa.wasm
wasm/variable/: global_get_op.wat  global_ops.wat  global_set_op.wat  local_get_op.wat  local_get_op_params.wat  local_ops.wat  local_set_op.wat  local_tee_op.wat
