[package]
name = "zk-engine"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova = { git = "https://github.com/wyattbenno777/arecibo", branch = "hypernova-ivc", package = "arecibo" }
wasmi = { path = "./third-party/wasmi/crates/wasmi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ff = "0.13"
itertools = "0.12.0"
wat = "1.200.0"
rand = "0.8.5"
anyhow = "1.0.81"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40", features = ["log"] }
thiserror = "1.0.61"
tracing-texray = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmi_wasi = { path = "./third-party/wasmi/crates/wasi" }

[patch.crates-io]
# This is needed to ensure halo2curves, which imports pasta-curves, uses the *same* traits in bn256_grumpkin
pasta_curves = { git = "https://github.com/lurk-lab/pasta_curves", branch = "dev" }
